--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Draftabl",
+  "name": "Draftabl Web App",
   "icons": [
     {
       "src": "Draftabl.png",
