--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,12 +3,12 @@
   "name": "Draftabl Web App",
   "icons": [
     {
-      "src": "Draftabl.png",
+      "src": "Draftabl_black_outlined.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "Draftabl.png",
+      "src": "Draftabl_white_outlined.png",
       "type": "image/png",
       "sizes": "512x512"
     }
