--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "install": "^0.13.0",
     "npm": "^9.6.2",
     "react": "^18.2.0",
+    "react-awesome-spinners": "^1.3.1",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
