--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev": "aws s3 sync build/ s3://dev.draftabl.com",
+    "dev": "aws s3 sync build/ s3://draftabl.com",
     "dev-deploy": "npm run build && npm run dev"
   },
   "eslintConfig": {
