--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-google-login": "^5.2.2",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
