Can now safely refresh without being kicked back to login.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,14 +3,9 @@
   "name": "Draftabl Web App",
   "icons": [
     {
-      "src": "Draftabl_black_outlined.png",
+      "src": "draftabl_logo_blue.png",
       "type": "image/png",
       "sizes": "192x192"
-    },
-    {
-      "src": "Draftabl_white_outlined.png",
-      "type": "image/png",
-      "sizes": "512x512"
     }
   ],
   "start_url": ".",
