--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "react-to-print": "^2.14.13",
     "sass": "^1.62.1",
     "styled-components": "^6.0.0-rc.1",
     "web-vitals": "^3.3.1"
